--- a/package.json
+++ b/package.json
@@ -10,9 +10,23 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.16.2",
+    "@astrojs/react": "^3.0.0",
+    "@astrojs/rss": "^2.1.0",
+    "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/svelte": "^4.0.0",
     "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/vue": "^3.0.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "astro": "^3.0.5",
-    "tailwindcss": "^3.3.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "svelte": "^4.2.0",
+    "tailwindcss": "^3.3.3",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "prettier": "^2.8.4",
